# webscr_deployaws

./: .gitignore  README.md  app_01.py  app_02.py  app_03.py  app_05.py  iphone_prices.db  pyproject.toml
